misc changes to code - exercises all